# DZ_13_WEB

./: main.py  pyproject.toml
Django/: manage.py  pyproject.toml
Django/hw_project/: asgi.py  urls.py  wsgi.py
Django/quotes/: forms.py  models.py  scrap.py  urls.py  utils.py  views.py
Django/quotes/migrations/: 0001_initial.py
Django/quotes/static/quotes/: feel_site.css  style.css
Django/quotes/static/styles/: add_author.css  add_post.css  author_detail.css
Django/quotes/templatetags/: extract.py
Django/users/migrations/: 0001_initial.py  0002_delete_tag_alter_quote_tags.py  0003_author_confirmed_author_user.py  0004_remove_author_confirmed.py
Django/utils/: autors.json  connect.py  migrate_data.py  migration.py  models.py  quotes.json
FastAPI/: alembic.ini  db.py  docker-compose.yml  run_server.py
FastAPI/migrations/: env.py
FastAPI/migrations/versions/: dcd743f50d75_init.py
src/: main.py  schemas.py
src/conf/: config.py
src/database/: models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py
